--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Titre de la page</title>
   
-    <link rel="stylesheet" href="./src/css/Nav.css">
+    <link rel="stylesheet" href="./src/css/banner.css">
 </head>
 <body>
     <div id="root"></div>
